fix: 定义边框常量与icon按钮宽度，去除z-index999

--- a/src/index.less
+++ b/src/index.less
@@ -154,7 +154,7 @@
       line-height: 8px;
       font-weight: 900;
       cursor: pointer;
-      z-index: 999;
+      background: #252525;
       &:hover {
         background: #383838;
       }
